--- a/styles/style_galeria_fotos.css
+++ b/styles/style_galeria_fotos.css
@@ -6,15 +6,13 @@
     margin: 0 auto;
     padding: 10px; 
 }
-
 .box-img{
     flex-basis: 30%;
     margin: 10px;
 }
-
 .box-img img{
     width: 100%;
     height: auto;
     display: block;
-    border: 4px solid rgb(144, 128, 233);
+    border: 4px solid #9080E9;
 }
