--- a/styles/style_navbar.css
+++ b/styles/style_navbar.css
@@ -2,12 +2,10 @@ body {
     font-family: poppins, sans-serif;
     margin: 0;
 }
-
 .container {
     display: flex;
     background-color: #7466ca; 
 }
-
 .navbar {
     display: flex;
     align-items: center;
@@ -15,45 +13,40 @@ body {
     height: 60px;
     flex-grow: 1;
 }
-
 .flex-item-link {
     padding: 10px;
 }
-
 .flex-item-link a {
     text-decoration: none;
-    font-size: 200;
+    font-size: 16px;
     color: white; 
 }
-
 .search-items {
     display: flex;
     align-items: center;
     margin-left: auto;
     padding: 20px;
 }
-
 .search-items input {
     padding: 10px;
     border-radius: 12px;
     border: 1px solid white;
-    height: 40px;
-    color: rgba(54, 63, 66, 0.63);
+    height: 30px;
+    color: #CCCCCC;
+    font-family: poppins;
 }
-
 .search-items input::placeholder {
-   
     color: #877dc4;
 }
-
 .btn-go {
-    margin-left: 10px;
-    padding: 10px 20px;
+    margin-left: 4px;
     border-radius: 15px;
     border: 1px solid white;
-    height: 40px;
+    height: 30px;
     color: #6A5ACD;
     cursor: pointer;
-    font-weight: bold;
     background-color: #ffffff; 
+    font-family: poppins;
+    text-align: center;
+    line-height: 30px;
 }
